# aws-lambda-functions-rs

./: README.md
gokabot-random-message-caller/: .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  deploy.sh  docker-compose.build.yml  docker-compose.yml
gokabot-random-message-caller/src/: error.rs  gokabot.rs  lambda_handler.rs  lib.rs
notification-by-gokabot/: Cargo.toml  Dockerfile  Dockerfile.build  build.sh  docker-compose.build.yml  docker-compose.yml
notification-by-gokabot/src/: error.rs  event.rs  lambda_handler.rs  lib.rs
notification-to-msteams/: Cargo.toml  Dockerfile  build.sh  docker-compose.build.yml  docker-compose.yml
notification-to-msteams/src/: lambda_handler.rs  lib.rs
notification-to-msteams/test/: local.rs
terraform/: README.md  main.tf  variables.tf
terraform/modules/ecr/: main.tf  outputs.tf
terraform/modules/events/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
terraform/modules/sns/: main.tf  outputs.tf  variables.tf
tonarinoyj-update-checker/: .env.template  Cargo.toml  Dockerfile  Dockerfile.build  README.md  build.sh  deploy.sh  docker-compose.build.yml  docker-compose.yml
tonarinoyj-update-checker/docker-entrypoint-initdb.d/postgres/: create_schema.sql
tonarinoyj-update-checker/migrations/: 20220501123520_create_latest_entries.sql
tonarinoyj-update-checker/src/: atom.rs  lambda_handler.rs  lib.rs  line.rs  logger.rs  models.rs  types.rs
tonarinoyj-update-checker/test/: sample.xml
twitter-followee-list/: .env.template  Cargo.toml  Dockerfile  build.sh  docker-compose.build.yml  docker-compose.yml
twitter-followee-list/src/: event.rs  lambda_handler.rs  lib.rs
twitter-merge-lists/: .dockerignore  .env.template  .gitignore  Cargo.toml  Dockerfile  Dockerfile.build  README.md  build.sh  deploy.sh  docker-compose.build.yml  docker-compose.yml
twitter-merge-lists/src/: error.rs  lambda_handler.rs  lib.rs  local.rs  user.rs
twitter-merge-lists/test/events/: cloudwatch-scheduled-event.json
