[package]
name = "notification-by-gokabot"
version = "0.1.0"
authors = ["23prime <23.prime.37@gmail.com>"]
edition = "2018"

[[bin]]
name = "notification-by-gokabot"
path = "src/lambda_handler.rs"

[dependencies]
lambda_runtime = "0.3"
log = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rusoto_core = "0.46"
rusoto_ssm = "0.46"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.6", features = ["full"] }
