[package]
name = "tonarinoyj-update-checker"
version = "0.1.0"
authors = ["23prime <23.prime.37@gmail.com>"]
edition = "2018"

[[bin]]
name = "tonarinoyj-update-checker"
path = "src/lambda_handler.rs"

[dependencies]
chrono = "0.4.19"
dotenv = "0.15.0"
lambda_runtime = "0.5.1"
log = "0.4.16"
log4rs = "1.1.1"
reqwest = { version = "0.11.10", features = ["json"] }
roxmltree = "0.14.1"
serde = "1.0.136"
sqlx = { version = "0.5.13", features = [
  "runtime-tokio-native-tls",
  "postgres",
] }
tokio = { version = "1.18.0", features = ["full"] }
